Minimize Zammad accesses with the newly introduced cache. Differences in role assignments are excluded from the comparison and no longer trigger an update. No more ping-pong changes between LDAP and AD configuration.